# modular-software-submodule1

./: .gitmodules  CMakeLists.txt  README.md  build_and_test.sh
cmake_dependencies/: Dependencies.cmake
src/: CMakeLists.txt  dependencies.h  submodule1.cpp  submodule1.h
tests/: CMakeLists.txt  submodule1_test.cpp
