add_library(submodule1 submodule1.cpp)
target_include_directories(submodule1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

# Add all dependencies automatically
foreach(dep ${SUBMODULE_DEPENDENCIES})
  target_link_libraries(submodule1 ${dep})
  get_target_property(dep_include_dirs ${dep} INTERFACE_INCLUDE_DIRECTORIES)
  if(dep_include_dirs)
    target_include_directories(submodule1 PUBLIC ${dep_include_dirs})
  endif()
  get_target_property(dep_source_dir ${dep} SOURCE_DIR)
  if(dep_source_dir)
    target_include_directories(submodule1 PUBLIC ${dep_source_dir})
  endif()
endforeach() 